# LandGuard

./: .env.example  .gitignore  BLOCKCHAIN_DEPLOYMENT.md  DEMO_README.md  DEPLOYED.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOY_PUBLIC.md  Dockerfile.landguard  Dockerfile.pcc  Makefile  PROJECT_OVERVIEW.md  Procfile  QUICK_START.md  README.md  SETUP_GUIDE.md  USAGE.md  clean_dataset.py  demo_script.ps1  demo_script.py  docker-compose.yml  extract_cifar10_images.py  fix-encoding.ps1  fix_endcoding.py  main.py  nginx.conf  pyproject.toml  render.yaml  requirements.txt  restored.txt  restoredone  run_demo.bat  setup.ps1  setup.sh  start.ps1  start.sh  start_system.bat  start_system.ps1  stop.ps1  (+6 more)
landguard/: .env.example  HACKATHON_COMPLETE_CHECKLIST.md  README.md  WORKFLOW_INTEGRATION_SUMMARY.md  __init__.py  check_database.py  check_land_records_schema.py  check_schema.py  detailed_anomaly_report_LD-SAMPLE_LAND_DOCUM.txt  detailed_anomaly_report_LD-TEST.txt  fix_land_record_columns.py  fix_land_records_table.py  fix_landguard_column.py  landguard  landguard_cli.py  pyproject.toml  pytest.ini  requirements.production.txt  requirements.txt  run_performance.py  run_tests.py  setup.py  simple_test.py  start_backend.ps1  start_server.py  test-complete-system.ps1  test_api.py  test_upload.py
landguard/Analytics/: readme.md  requirements_analyzer.txt  run_statistical_analysis.py
landguard/Blockchain/: .env.example  Readme.md  blockchain_config.yaml  check-balance.js  diagnose_blockchain_files.py  final-deploy.js  fix_encoding_problems.py  (+3 more)
(+290 files in other folders)
